@@ -1,3 +1,4 @@
+	* fix potential crash when using torrent_handle::add_piece
 	* added missing add_torrent_alert to python binding
 
 0.16.5 release
